--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#d64772">
-    <meta name="msapplication-TileColor" content="#d64772">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e85672">
+    <meta name="msapplication-TileColor" content="#e85672">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:image:width" content="1239">
+    <meta property="og:image:height" content="649">
+    <meta property="og:url" content="devandprod.ru">
+    <meta property="og:image" content="http://devandprod.ru/media/og-image.jpg">
+    <meta property="og:description" content="Мы воплощаем в код ваши идеи для бизнеса.
+
+    Разрабатываем мобильные приложения, корпоративные сайты, интернет-магазины, порталы и сервисы. Мы автоматизируем бизнес-процессы и выпускаем продукты под нужды наших клиентов.">
+    <meta property="og:title" content="Разработка и продакшн">
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
@@ -256,7 +265,7 @@
                 <label for="email">Электронная почта: *</label>
                 <input id="email" type="email" class="input" placeholder="mail@devandprod.ru">
                 <label for="phone">Номер телефона:</label>
-                <input id="phone" type="phone" class="input" placeholder="+7 999 999 99 99">
+                <input id="phone" type="phone" class="input" placeholder="+7 995 500 11 49">
                 <label for="file">Файл:</label>
                 <input id="file" type="file" class="input inputfile">
                 <label for="file" class="input" style="padding: 2px 10px;">
@@ -270,17 +279,17 @@
                 <div class="space-2"></div>
             </div>
             <div class="medium-rm large-rm">
-                <div class="contact columns small-12 no-pd">
+                <div class="contact columns small-12">
                     <p class="translucent">Адрес</p>
                     <a target="_blank" href="https://www.google.ru/maps/place/%D0%9B%D0%B5%D0%BD%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%BF%D1%80.,+6%D1%812,+588,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119049/@55.7245425,37.6013112,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54b0c56f00001:0x512654e400cac648!8m2!3d55.7245425!4d37.6034999">
                         <p class="bold">119049, Ленинский проспект, 6с3, офис 588</p>
                     </a>
                 </div>
-                <div class="contact columns small-12 medium-6 no-pd">
+                <div class="contact columns small-12 medium-6">
                     <p class="translucent">Телефон</p>
                     <a href="tel:+79955001149"><p class="bold">+7 (995) 500-11-49</p></a>
                 </div>
-                <div class="contact columns small-12 medium-6 no-pd">
+                <div class="contact columns small-12 medium-6">
                     <p class="translucent">Почта</p>
                     <a href="mailto:mail@devandprod.ru"><p class="bold">mail@devandprod.ru</p></a>
                 </div>
