--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
             <div class="columns medium-6 large-5 text-left small-text-center">
                 <div class="space-3"></div>
-                <h2 class="no-mg">Заполните форму</h2>
+                <h2 class="no-mg" style="font-size: 36px">Заполните форму</h2>
                 <h5>Чтобы мы связались с вами</h5>
                 <div class="space-2"></div>
                 <p class="translucent">Если хотите заказать работу или у Вас есть вопросы, предложения, идеи, свяжитесь с нами заполнив форму чтобы мы вступили в плодотворное сотрудничество</p>
