--- a/index.html
+++ b/index.html
@@ -260,23 +260,41 @@
                 <div class="form-back"> </div>
                 <h3 class="">Форма нового заказа</h3>
                 <div class="space-2"></div>
-                <label for="name">Ваше имя: *</label>
-                <input id="name" type="text" class="input" placeholder="Как к Вам обращаться?">
-                <label for="email">Электронная почта: *</label>
-                <input id="email" type="email" class="input" placeholder="mail@devandprod.ru">
-                <label for="phone">Номер телефона:</label>
-                <input id="phone" type="phone" class="input" placeholder="+7 995 500 11 49">
-                <label for="file">Файл:</label>
-                <input id="file" type="file" class="input inputfile">
-                <label for="file" class="input" style="padding: 2px 10px;">
-                    <span class="file-label">Файл не выбран</span>
-                    <div class="button right">Выбрать файл</div>
-                </label>
-                <input id="file" type="file" class="input">
-                <label for="message">Сообщение:</label>
-                <textarea id="message" type="textarea" class="input area" rows="5" placeholder="Опишите вашу идею"></textarea>
-                <input class="button" type="submit" value="Отправить">
+                <form name="form" onsubmit="formSubmit(); return false;" id="form">
+                    <!-- <input id="Topic" type="text" value="Новая заявка" hidden> -->
+                    <label for="SenderName">Ваше имя: *</label>
+                    <input id="SenderName" name="SenderName" type="text" class="input validation" placeholder="Как к Вам обращаться?">
+                    <label for="SenderEmail">Электронная почта: *</label>
+                    <input id="SenderEmail" name="SenderEmail" type="email" class="input validation" placeholder="mail@devandprod.ru">
+                    <label for="SenderPhoneNumber">Номер телефона:</label>
+                    <input id="SenderPhoneNumber" name="SenderPhoneNumber" type="phone" class="input" placeholder="+7 995 500 11 49">
+                    <label for="Attachment">Файл:</label>
+                    <input id="Attachment" name="Attachment" type="file" class="input inputfile">
+                    <label for="Attachment" class="input" style="padding: 2px 10px;">
+                        <span class="file-label">Файл не выбран</span>
+                        <div class="button right">Выбрать файл</div>
+                    </label>
+                    <label for="Content">Сообщение:</label>
+                    <textarea id="Content" name="Content" type="textarea" class="input area" rows="5" placeholder="Опишите вашу идею"></textarea>
+                    <p id="form-message" class="hide">Введите все обязательные поля (*)</p>
+                    <button id="form-submit" class="button submit">Отправить</button>
+                    <!-- <input type="submit" id="form-submit" class="button submit">Отправить</button> -->
+                </form>
                 <div class="space-2"></div>
+                <div id="submit-success" class="form-back all-center">
+                    <div id="success-info" style="margin-top: -40px">
+                        <img class="success" src="./media/success.png" alt="Успешно">
+                        <div class="space-2"></div>
+                        <h3 class="">Спасибо за заявку</h3>
+                        <h4 class="">Мы свяжемся с вами в ближайшее время</h4>
+                    </div>
+                    <div id="error-info" class="remove" style="margin-top: -40px">
+                        <img class="success" src="./media/error.png" alt="Ошибка">
+                        <div class="space-2"></div>
+                        <h3 class="">Произошла ошибка</h3>
+                        <h4 class="">Попробуйте связаться через наши контакты</h4>
+                    </div>
+                </div>
             </div>
             <div class="medium-rm large-rm">
                 <div class="contact columns small-12">
