Mobile makeup fixes

--- a/index.html
+++ b/index.html
@@ -103,23 +103,25 @@
         <div class="small-12 row">
             <div class="columns small-12 medium-4">
                 <img class="tetris-block" src="./media/tetris/t.png" alt="Составление ТЗ">
-                <div class="space-2"></div>
+                <div class="space-2 small-rm"></div>
                 <h3>Составление ТЗ</h3>
                 <p>
                     Мы берём на себя заботы по формированию технического задания, тщательно анализируем предметную область и выстраиваем простую коммуникацию для всех участников проекта.
                 </p>
             </div>
             <div class="columns small-12 medium-4">
+                <div class="space-2 medium-rm large-rm"></div>
                 <img class="tetris-block" src="./media/tetris/s.png" alt="Разработка">
-                <div class="space-2"></div>
+                <div class="space-2 small-rm"></div>
                 <h3>Разработка</h3>
                 <p>
                     Мы за бережливое производство, поэтому работаем итерациями. Необходим быстрый запуск прототипа с небольшим бюджетом? Мы организуем работу так, чтобы минимизировать ваши расходы и риски.                        
                 </p>
             </div>
             <div class="columns small-12 medium-4">
+                <div class="space-2 medium-rm large-rm"></div>
                 <img class="tetris-block" src="./media/tetris/o.png" alt="Гарантия">
-                <div class="space-2"></div>
+                <div class="space-2 small-rm"></div>
                 <h3>Гарантия</h3>
                 <p>
                     Мы разрабатываем собственные решения для ваших задач и отвечаем за их качество. Бизнесу свойственно меняться, и мы готовы эти изменения подхватывать, даже после выхода продукта.
@@ -207,6 +209,7 @@
                     </p>
                 </div>
                 <div class="columns small-12 medium-4">
+                    <div class="space-2 medium-rm large-rm"></div>
                     <img class="preference-icon" src="./media/icon/quality.png" alt="Надежность">
                     <h3>Надежность</h3>
                     <p>
@@ -214,6 +217,7 @@
                     </p>
                 </div>
                 <div class="columns small-12 medium-4">
+                    <div class="space-2 medium-rm large-rm"></div>
                     <img class="preference-icon" src="./media/icon/refund.png" alt="Доступность">
                     <h3>Доступность</h3>
                     <p>
@@ -234,6 +238,7 @@
                 <h5>Чтобы мы связались с вами</h5>
                 <div class="space-2"></div>
                 <p class="translucent">Если хотите заказать работу или у Вас есть вопросы, предложения, идеи, свяжитесь с нами заполнив форму чтобы мы вступили в плодотворное сотрудничество</p>
+                <div class="space-2 medium-rm large-rm"></div>
                 <div class="small-rm">
                     <div class="contact columns small-12 no-pd">
                         <p class="translucent">Адрес</p>
@@ -298,6 +303,7 @@
             </div>
             <div class="medium-rm large-rm">
                 <div class="contact columns small-12">
+                <div class="space-2"></div>
                     <p class="translucent">Адрес</p>
                     <a target="_blank" href="https://www.google.ru/maps/place/%D0%9B%D0%B5%D0%BD%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%BF%D1%80.,+6%D1%812,+588,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119049/@55.7245425,37.6013112,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54b0c56f00001:0x512654e400cac648!8m2!3d55.7245425!4d37.6034999">
                         <p class="bold">119049, Ленинский проспект, 6с3, офис 588</p>
@@ -312,7 +318,7 @@
                     <a href="mailto:mail@devandprod.ru"><p class="bold">mail@devandprod.ru</p></a>
                 </div>
                 <div class="columns small-12 medium-10 end">
-                    <img src="./media/dap_static.png" alt="DAP" class="logo-s">
+                    <img src="./media/dap_static.png" alt="DAP" class="logo-s-footer">
                     <p class="translucent text-center">© Dev &amp Prod 2018</p>
                 </div>
             </div>
