--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <div class="small-12 row">
                     <img src="./media/dap_logo.gif" alt="DAP" class="logo-s">
                     <ul class="navigation">
-                        <li><a href="#about">О нас</a></li>
-                        <li><a href="#portfolio">Портфолио</a></li>
-                        <li><a href="#contact">Контакты</a></li>
+                        <li><a href="#about" onclick="yaCounter49127821.reachGoal('CLICK_ABOUT'); return true;">О нас</a></li>
+                        <li><a href="#portfolio" onclick="yaCounter49127821.reachGoal('CLICK_PORTFOLIO'); return true;">Портфолио</a></li>
+                        <li><a href="#contact" onclick="yaCounter49127821.reachGoal('CLICK_CONTACT'); return true;">Контакты</a></li>
                     </ul>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <h1>Разработка<br/>и продакшн</h1>
                 <h4>Мы воплощаем в код ваши идеи для бизнеса</h4>
                 <div class="space-2"></div>
-                <a href="#contact" class="button">Заказать услуги</a>
+                <a href="#contact" class="button" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать услуги</a>
             </div>
             <div class="scroll-down">
                 <a href="#about">
@@ -128,7 +128,7 @@
                 </p>
             </div>
         </div>
-        <a href="#contact" class="button">Заказать работу</a>
+        <a href="#contact" class="button" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать работу</a>
         <div class="space-2"></div>
     </section>
     <section id="portfolio">
