--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="small-12 row block">
-                <h1>Разработка<br/>и продакшн</h1>
+                <h1>Development &<br/>Production</h1>
                 <h4>Мы воплощаем в код ваши идеи для бизнеса</h4>
                 <div class="space-2"></div>
                 <a href="#contact" class="button">Заказать услуги</a>
@@ -106,7 +106,7 @@
                 <div class="space-2"></div>
                 <h3>Составление ТЗ</h3>
                 <p>
-                    Мы берём на себя заботы по формированию технического задания, тщательно анализируем предметную область и выстраиваем простую коммуникацию для всех участников проекта.
+                    Наша команда берёт на себя заботы по формированию технического задания, анализирует предметную область и выстраивает простую коммуникацию для всех участников проекта.
                 </p>
             </div>
             <div class="columns small-12 medium-4">
@@ -132,7 +132,7 @@
     <section id="portfolio">
         <div class="small-12 medium-6 row block">
             <h2>Портфолио</h2>
-            <p>Чтобы держать руку на пульсе нашей индустрии, мы занимаемся разработкой как коммерческих, так и собственных продуктов</p>
+            <p>Чтобы держать руку на пульсе индустрии, DAP занимается разработкой как коммерческих, так и собственных продуктов</p>
         </div>
         <div class="select-wrapper">
             <div id="select-portfolio" class="select">
@@ -203,7 +203,7 @@
                     <img class="preference-icon" src="./media/icon/employee.png" alt="Смелость">
                     <h3>Смелость</h3>
                     <p>
-                        Мы можем и хотим взяться за решение нестандартных бизнес-задач, автоматизировать те процессы, для которых не придумано готовых решений, давать бизнесам инструменты, которых у них нет.
+                        Мы можем и хотим взяться за решение нестандартных бизнес-задач, автоматизировать те процессы, для которых нет готовых решений, давать бизнесам инструменты, которых у них нет.
                     </p>
                 </div>
                 <div class="columns small-12 medium-4">
@@ -217,7 +217,7 @@
                     <img class="preference-icon" src="./media/icon/refund.png" alt="Доступность">
                     <h3>Доступность</h3>
                     <p>
-                            Даже малый бизнес и стартапы, не обладающие бюджетами для приобретения дорогих многофункциональных промышленных систем могут получить у нас инструменты исключительно под свои нужды.
+                            Даже малый бизнес и стартапы, не обладающие бюджетами для приобретения дорогих систем, могут получить у нас инструменты исключительно под свои нужды. Никаких трюков, наше ценообразование полностью прозрачно.
                     </p>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                 <h2 class="no-mg" style="font-size: 36px">Заполните форму</h2>
                 <h5>Чтобы мы связались с вами</h5>
                 <div class="space-2"></div>
-                <p class="translucent">Если хотите заказать работу или у Вас есть вопросы, предложения, идеи, свяжитесь с нами заполнив форму чтобы мы вступили в плодотворное сотрудничество</p>
+                <p class="translucent">Если хотите заказать работу или у вас есть вопросы, предложения, идеи, заполните форму. В течение рабочего дня мы свяжемся с вами, чтобы мы вступили в плодотворное сотрудничество</p>
                 <div class="small-rm">
                     <div class="contact columns small-12 no-pd">
                         <p class="translucent">Адрес</p>
