--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1>Development &<br/>Production</h1>
                 <h4>Мы воплощаем в код ваши идеи для бизнеса</h4>
                 <div class="space-2"></div>
-                <a href="#contact" class="button" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать услуги</a>
+                <a href="#contact" class="button big" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать услуги</a>
             </div>
             <div class="scroll-down">
                 <a href="#about">
@@ -199,7 +199,7 @@
         </div>
     </section>
     <section id="preferences" class="gray">
-            <div class="space-2"></div>
+            <div class="space-1"></div>
             <div class="small-12 row">
                 <div class="columns small-12 medium-4">
                     <img class="preference-icon" src="./media/icon/employee.png" alt="Смелость">
