--- a/index.html
+++ b/index.html
@@ -227,16 +227,17 @@
             </div>
     </section>
 
-    <section  id="contact" class="dark-bg">
+    <section  id="contact" class="dark-bg no-pd">
         <div class="small-12 row">
             <div class="columns small-12 space-4 small-rm"></div>
             <div class="columns w-05 small-rm medium-rm space-1"></div>
 
             <div class="columns medium-6 large-5 text-left small-text-center">
                 <div class="space-3"></div>
+                <div class="space-1"></div>
                 <h2 class="no-mg" style="font-size: 36px">Заполните форму</h2>
                 <h5>Чтобы мы связались с вами</h5>
-                <div class="space-2"></div>
+                <div class="space-1"></div>
                 <p class="translucent">Если хотите заказать работу или у Вас есть вопросы, предложения, идеи, свяжитесь с нами заполнив форму чтобы мы вступили в плодотворное сотрудничество</p>
                 <div class="space-2 medium-rm large-rm"></div>
                 <div class="small-rm">
