--- a/index.html
+++ b/index.html
@@ -54,16 +54,6 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/49127821" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120637829-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-120637829-1');
-    </script>
 </head>
 <body>
     <header class="row expanded">
@@ -94,11 +84,12 @@
     <section id="about">
         <div class="small-12 row block">
             <h2>Чем мы занимаемся?</h2>
-            <h4>Разрабатываем мобильные приложения, корпоративные сайты, интернет-магазины, порталы и сервисы. Мы автоматизируем бизнес-процессы и выпускаем продукты под нужды наших клиентов.</h4>
+            <h4  class="simply-text">Разрабатываем мобильные приложения, корпоративные сайты, интернет-магазины, порталы и сервисы. Мы автоматизируем бизнес-процессы и выпускаем продукты под нужды наших клиентов.</h4>
         </div>
     </section>
     <section id="how" class="gray">
         <h2>Как мы это делаем?</h2>
+        <div class="space-2 medium-rm small-rm"></div>
         <div class="space-3"></div>
         <div class="small-12 row">
             <div class="columns small-12 medium-4">
@@ -128,6 +119,7 @@
                 </p>
             </div>
         </div>
+        <div class="space-2 medium-rm small-rm"></div>
         <a href="#contact" class="button" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать работу</a>
         <div class="space-2"></div>
     </section>
@@ -136,6 +128,7 @@
             <h2>Портфолио</h2>
             <p>Чтобы держать руку на пульсе индустрии, DAP занимается разработкой как коммерческих, так и собственных продуктов</p>
         </div>
+        <div class="space-1 medium-rm small-rm"></div>
         <div class="select-wrapper">
             <div id="select-portfolio" class="select">
                 <div class="die"></div>
@@ -143,6 +136,7 @@
                 <div class="part right">Собственные разработки</div>
             </div>
         </div>
+        <div class="space-2 medium-rm small-rm"></div>
         <div id="portfolio-commerce" class="small-12 row">
             <div class="columns project-wrapper small-rm medium-4 js-tilt">
                 <div class="project-item level-0" style="background-image: url(./media/portfolio/MGSU_back.png);"></div>
@@ -199,7 +193,7 @@
         </div>
     </section>
     <section id="preferences" class="gray">
-            <div class="space-1"></div>
+            <div class="space-1 large-rm"></div>
             <div class="small-12 row">
                 <div class="columns small-12 medium-4">
                     <img class="preference-icon" src="./media/icon/employee.png" alt="Смелость">
