В очередной раз исправил текст

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="space-2 small-rm"></div>
                 <h3>Разработка</h3>
                 <p>
-                    Мы за бережливое производство, поэтому работаем итерациями. Необходим быстрый запуск прототипа с небольшим бюджетом? Мы организуем работу так, чтобы минимизировать ваши расходы и риски.                        
+                    Мы за бережливое производство, поэтому работаем итерациями. Необходим быстрый запуск прототипа с небольшим бюджетом? Мы минимизируем ваши расходы и риски.                        
                 </p>
             </div>
             <div class="columns small-12 medium-4">
@@ -236,9 +236,9 @@
                 <div class="space-3"></div>
                 <div class="space-1"></div>
                 <h2 class="no-mg" style="font-size: 36px">Заполните форму</h2>
-                <h5>Чтобы мы связались с вами</h5>
+                <h5>чтобы мы могли с вами связаться</h5>
                 <div class="space-1"></div>
-                <p class="translucent">Если хотите заказать работу или у Вас есть вопросы, предложения, идеи, свяжитесь с нами заполнив форму чтобы мы вступили в плодотворное сотрудничество</p>
+                <p class="translucent">Если хотите заказать работу или у вас есть вопросы, предложения, идеи, оставьте свои контактные данные. В течение рабочего дня мы свяжемся с вами и обсудим условия нашего дальнейшего сотрудничества.</p>
                 <div class="space-2 medium-rm large-rm"></div>
                 <div class="small-rm">
                     <div class="contact columns small-12 no-pd">
@@ -264,7 +264,7 @@
             <div class="columns small-rm medium-rm large-1 space-1"></div>
             <div class="columns medium-6 large-5 form-wrapper">
                 <div class="form-back"> </div>
-                <h3 class="">Форма нового заказа</h3>
+                <h3 class="">Форма для связи</h3>
                 <div class="space-2"></div>
                 <form name="form" id="form">
                     <!-- <input id="Topic" type="text" value="Новая заявка" hidden> -->
