--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
         </div>
     </section>
     <section id="how" class="gray">
-        <h2>Как мы это делаем?</h2>
-        <div class="space-2 medium-rm small-rm"></div>
-        <div class="space-3"></div>
+        <div class="columns small-12">
+            <h2>Как мы это делаем?</h2>
+            <div class="space-2 medium-rm small-rm"></div>
+            <div class="space-3"></div>
+        </div>
         <div class="small-12 row">
             <div class="columns small-12 medium-4">
                 <img class="tetris-block" src="./media/tetris/t.png" alt="Составление ТЗ">
