--- a/index.html
+++ b/index.html
@@ -251,9 +251,17 @@
                         <p class="translucent">Почта</p>
                         <a href="mailto:mail@devandprod.ru"><p class="bold">mail@devandprod.ru</p></a>
                     </div>
+                    <div class="contact columns small-12 medium-6 no-pd">
+                        <p class="translucent">Facebook</p>
+                        <a href="https://www.facebook.com/devandprod" target="_blank"><p class="bold">devandprod</p></a>
+                    </div>
+                    <div class="contact columns small-12 medium-6 no-pd">
+                        <p class="translucent">Блог</p>
+                        <a href="http://blog.devandprod.ru" target="_blank"><p class="bold">blog.devandprod.ru</p></a>
+                    </div>
                     <div class="columns small-12 medium-10 end">
-                        <img src="./media/dap_static.png" alt="DAP" class="logo-s">
-                        <p class="translucent text-center">© Dev &amp Prod 2018</p>
+                        <img src="./media/dap_static.png" alt="DAP" class="logo-s-footer">
+                        <!-- <p class="translucent text-center">© Dev &amp Prod 2018</p> -->
                     </div>
                 </div>
             </div>
@@ -313,6 +321,14 @@
                 <div class="contact columns small-12 medium-6">
                     <p class="translucent">Почта</p>
                     <a href="mailto:mail@devandprod.ru"><p class="bold">mail@devandprod.ru</p></a>
+                </div>
+                <div class="contact columns small-12 medium-6">
+                    <p class="translucent">Facebook</p>
+                    <a href="https://www.facebook.com/devandprod" target="_blank"><p class="bold">devandprod</p></a>
+                </div>
+                <div class="contact columns small-12 medium-6">
+                    <p class="translucent">Блог</p>
+                    <a href="http://blog.devandprod.ru" target="_blank"><p class="bold">blog.devandprod.ru</p></a>
                 </div>
                 <div class="columns small-12 medium-10 end">
                     <img src="./media/dap_static.png" alt="DAP" class="logo-s-footer">
