New hero text and style fixes

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 </div>
             </div>
             <div class="small-12 row block">
-                <h1>Development &<br/>Production</h1>
-                <h4>Мы воплощаем в код ваши идеи для бизнеса</h4>
+                <h1>Мобильные приложения и&nbsp;сайты</h1>
+                <h4>Разработка и автоматизация для стартапов и бизнеса</h4>
                 <div class="space-2"></div>
                 <a href="#contact" class="button big" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать услуги</a>
             </div>
