changed address to 2gis in pc version

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="small-rm">
                     <div class="contact columns small-12 no-pd">
                         <p class="translucent">Адрес</p>
-                        <a target="_blank" href="https://www.google.ru/maps/place/%D0%9B%D0%B5%D0%BD%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%BF%D1%80.,+6%D1%812,+588,+%D0%9C%D0%BE%D1%81%D0%BA%D0%B2%D0%B0,+119049/@55.7245425,37.6013112,17z/data=!3m1!4b1!4m5!3m4!1s0x46b54b0c56f00001:0x512654e400cac648!8m2!3d55.7245425!4d37.6034999">
+                        <a target="_blank" href="https://2gis.ru/moscow/query/Dev%20%26%20Prod/firm/70000001032524187?queryState=center%2F37.606516%2C55.726595%2Fzoom%2F16">
                             <p class="bold">119049, Ленинский проспект, 6с3, офис 588</p>
                         </a>
                     </div>
