Slider, schedule and mobile  sections

--- a/forum/index.html
+++ b/forum/index.html
@@ -6,8 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dev & Prod - разработка приложений и сайтов</title>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" href="../css/foundation.min.css">
     <link rel="stylesheet" href="../css/case.css">
+
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
@@ -100,117 +102,127 @@
         <div class="small-12 row block">
             <h4>
                 <img class="info-logo" src="../media/PortfolioLogos/Forum.png" alt="Forum">
-                В октябре 2016 года планировалось проведение первого Форума эндаумент-фондов. Нашей задачей стала разработка сайта-визитки мероприятия. Заказчик рассчитывал на ранний запуск, чтобы привлечь аудиторию и включать адрес сайта в информационные рассылки и полиграфическую продукцию.
+                В октябре 2016 года планировалось проведение первого Форума эндаумент-фондов. Нашей задачей стала разработка сайта-визитки мероприятия. Заказчик рассчитывал на ранний запуск, чтобы привлечь аудиторию и включать адрес сайта в информационные рассылки и полиграфическую продукцию.
             </h4>
         </div>
     </section>
-    <section id="design">
+    <section id="design" class="slider-wrapper">
         <div class="small-12 row block">
             <h2 class="text-center">Дизайн</h2>
             <h4>
                 Главным вызовом в разработке этого сайта было создание дизайна. Среди заявленных спикеров конференции были заместитель председателя правительства Аркадий Дворкович, министр образования Дмитрий Ливанов и ректор НИТУ "МИСиС" Алевтина Черникова, что задавало планку для дизайна сайта и предполагало "статусность".
             </h4>
+            <div class="slider">
+                <div>
+                    <img src="../media/forum/forum-1.jpg" alt="Forum">
+                </div>
+                <div>
+                    <img src="../media/forum/forum-2.jpg" alt="Forum">
+                </div>
+                <div>
+                    <img src="../media/forum/forum-3.jpg" alt="Forum">
+                </div>
+            </div>
+            <h4>
+                От дизайна требовалось быть переиспользуемым - именно нам доверили сформировать визуальный стиль Форума, которому впоследствии соответствовали бы атрибутика и печатные материалы.
+            </h4>
         </div>
     </section>
-    <section id="how">
-        <svg height="auto" viewBox="0 0 1440 679" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <section id="schedule" class="no-pd">
+        <div class="small-12 row block">
+            <div class="small-12 columns">
+                <h2 class="text-center">Расписание</h2>
+            </div>
+            <div class="space-4"></div>
+            <div class="small-12 columns no-pd infoblock-wrapper">
+                <div class="small-12 medium-7 columns"></div>
+                <div class="small-12 medium-12 large-5 columns no-pd">
+                    <div class="img-mask grad-bg infoblock js-tilt">
+                        <p class="no-mg">
+                            Важнейшим элементом сайта конференции являлось расписание - оно должно быть легко читаемым для тех, кто хочет выяснить общую повестку мероприятия, достаточно подробным, чтобы по нему можно было ориентироваться, а так же хорошо выглядеть как на больших мониторах, так и на экранах телефонов.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="small-12 medium-12 large-9 columns end no-pd">
+                <div class="img-mask js-tilt"><img src="../media/forum/forum-2.jpg" alt="Forum"></div>
+            </div>
+        </div>
+    </section>
+    <section id="mobile">
+        <svg class="bg-decor" height="auto" viewBox="0 0 3240 731" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
-                <linearGradient x1="0%" y1="100%" x2="97.268%" y2="4.524%" id="b">
-                    <stop stop-color="#027F7E" offset="0%"/>
-                    <stop stop-color="#49DE9C" offset="100%"/>
+                <linearGradient x1="21.507%" y1="100%" x2="71.025%" y2="4.337%" id="b">
+                <stop stop-color="#027F7E" offset="0%"/>
+                <stop stop-color="#49DE9C" offset="100%"/>
                 </linearGradient>
-                <path d="M0 326.951c924.739 143.38 768.04-461.175 1440-298.8v264.7C1015.931 218.399 1015.931 818.443 0 647.985V326.951z" id="a"/>
+                <path d="M900 382.987c955.15 133.416 774.257-463.155 1440-298.8 557.465 137.624 226.584 523.341 900 523.341-659.344 180.693-524.619-183.342-900-258.64-412.657-82.776-380.022 510.85-1440 355.133C346.587 622.72 381.086 8.38 0 8.38c386.914-69.268 449.962 311.745 900 374.606z" id="a"/>
             </defs>
             <use fill="url(#b)" xlink:href="#a" fill-rule="evenodd"/>
         </svg>
-        <div class="columns small-12">
-            <h2>Как мы это делаем?</h2>
-            <div class="space-2 medium-rm small-rm"></div>
-            <div class="space-3"></div>
-        </div>
-        <div class="small-12 row">
-            <div class="columns small-12 medium-4">
-                <img class="tetris-block" src="../media/tetris/t.png" alt="Составление ТЗ">
-                <div class="space-2 small-rm"></div>
-                <h3>Составление ТЗ</h3>
-                <p>
-                    Наша команда берёт на себя заботы по формированию технического задания, анализирует предметную область и выстраивает простую коммуникацию для всех участников проекта.
-                </p>
+        <div class="small-12 row block">
+            <div class="small-12 medium-6 columns no-pd">
+                <h2>Мобильная версия</h2>
+                <h4>
+                        Сделали удобную адаптивнцю версию сайта чтобы на ней хорошо отображалось расписание, так как это одна из главных частей сайта. При этом не забыли и про другие разделы 
+                </h4>
             </div>
-            <div class="columns small-12 medium-4">
-                <div class="space-2 medium-rm large-rm"></div>
-                <img class="tetris-block" src="../media/tetris/s.png" alt="Разработка">
-                <div class="space-2 small-rm"></div>
-                <h3>Разработка</h3>
-                <p>
-                    Мы за бережливое производство, поэтому работаем итерациями. Необходим быстрый запуск прототипа с небольшим бюджетом? Мы минимизируем ваши расходы и риски.                        
-                </p>
-            </div>
-            <div class="columns small-12 medium-4">
-                <div class="space-2 medium-rm large-rm"></div>
-                <img class="tetris-block" src="../media/tetris/o.png" alt="Гарантия">
-                <div class="space-2 small-rm"></div>
-                <h3>Гарантия</h3>
-                <p>
-                    Мы разрабатываем собственные решения для ваших задач и отвечаем за их качество. Бизнесу свойственно меняться, и мы готовы эти изменения подхватывать, даже после выхода продукта.
-                </p>
+            <div class="small-12 medium-6 columns no-pd">
+            <div class="phone-wrapper">
+                <div class="phone">
+                    <div class="screen">
+                        <iframe src="./index.html" frameborder="0"></iframe>
+                    </div>
+                    <img src="../media/iPhone-frame.png" alt="iPhone">
+                </div>
             </div>
         </div>
-        <div class="space-2 medium-rm small-rm"></div>
-        <a href="#contact" class="button" onclick="yaCounter49127821.reachGoal('CALL_TO_ACTION'); return true;">Заказать работу</a>
-        <div class="space-2"></div>
+
+    </section>
+
+    <section id="realisation" class="no-pd">
+        <div class="small-12 row block">
+            <h4>
+                Заказчик предупредил о возможных частых изменениях в программе мероприятия, составе спикеров и даже контактной информации, поэтому главным вызовом при вёрстке была декомпозиция разметки страницы и её данных. Для удобства внесения правок в указанные блоки мы решили не использовать замедляющие работу сайта базы данных, а хранить данные в JSON-файле, динамически подгружавшемся сайтом при загрузке страницы. При этом данные, влияющие на индексацию сайта в поисковых системах, остались в разметке.
+                <br/>
+                <br/>
+                В серверной части сайта был реализован функционал отправки писем о регистрации на Форум. Информация о регистрации приходила на почтовый ящик заказчика, предварительно проходя валидацию для отсеивания некорректно сформированных писем: без имени и контактных данных.
+            </h4>
+        </div>
     </section>
     <section id="portfolio">
-        <div class="small-12 medium-6 row block">
-            <h2>Портфолио</h2>
-            <p>Чтобы держать руку на пульсе индустрии, DAP занимается разработкой как коммерческих, так и собственных продуктов</p>
-        </div>
-        <div class="space-1 medium-rm small-rm"></div>
-        <div class="select-wrapper">
-            <div id="select-portfolio" class="select">
-                <div class="die"></div>
-                <div class="part left">Коммерческие проекты</div>
-                <div class="part right">Собственные разработки</div>
-            </div>
-        </div>
-        <svg height="auto" viewBox="0 0 1440 426" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="bg-decor" height="auto" viewBox="0 0 3240 466" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
-              <linearGradient x1="0%" y1="100%" x2="97.268%" y2="4.524%" id="b1">
+              <linearGradient x1="20.546%" y1="100%" x2="74.785%" y2="5.732%" id="b1">
                 <stop stop-color="#027F7E" offset="0%"/>
                 <stop stop-color="#49DE9C" offset="100%"/>
               </linearGradient>
-              <path d="M0 14.04C465.36 168.169 933.038-172.937 1440 133v120.632C1088.583 60.534 556.185 551.347 0 393.687V14.04z" id="a1"/>
+              <path d="M900 166.608c465.36 154.13 933.038-186.976 1440 118.962 396.946 260.685 728.237 155.885 900-23.119-215.172 283.804-632.88 300.938-900 143.75-351.417-193.098-883.815 297.714-1440 140.054-534.268-192.17-682.768-140.053-900 0C141.803 262.451 464.33-6.357 900 166.608z" id="a1"/>
             </defs>
-            <use fill="url(#b1)" xlink:href="#a1" fill-rule="evenodd"/>
-          </svg>
-    </section>
-    <section id="preferences">
-            <div class="space-1 large-rm"></div>
-            <div class="small-12 row">
-                <div class="columns small-12 medium-4">
-                    <img class="preference-icon" src="../media/icon/employee.png" alt="Смелость">
-                    <h3>Смелость</h3>
-                    <p>
-                        Мы можем и хотим взяться за решение нестандартных бизнес-задач, автоматизировать те процессы, для которых нет готовых решений, давать бизнесам инструменты, которых у них нет.
-                    </p>
-                </div>
-                <div class="columns small-12 medium-4">
-                    <div class="space-2 medium-rm large-rm"></div>
-                    <img class="preference-icon" src="../media/icon/quality.png" alt="Надежность">
-                    <h3>Надежность</h3>
-                    <p>
-                        Наши методики ведения проектов позаимствованы у ведущих российских продуктовых IT-компаний. Мы умеем доводить наши продукты до релиза в срок благодаря тщательному планированию и организации работы.
-                    </p>
-                </div>
-                <div class="columns small-12 medium-4">
-                    <div class="space-2 medium-rm large-rm"></div>
-                    <img class="preference-icon" src="../media/icon/refund.png" alt="Доступность">
-                    <h3>Доступность</h3>
-                    <p>
-                            Даже малый бизнес и стартапы, не обладающие бюджетами для приобретения дорогих систем, могут получить у нас инструменты исключительно под свои нужды. Никаких трюков, наше ценообразование полностью прозрачно.
-                    </p>
-                </div>
+            <use fill="url(#b1)" xlink:href="#a1" transform="translate(0 -112)" fill-rule="evenodd"/>
+        </svg>
+        <div class="small-12 row block">
+                <h1>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                </h1>
             </div>
+    </section>
+    <section id="conclusion" class="">
+        <div class="small-12 row block">
+            <h4>
+                Форум не был проведён из-за организационных проблем, однако сайт был разработан и введён в эксплуатацию за один месяц, полностью удовлетворив исходные требования. 
+            </h4>
+        </div>
     </section>
 
     <section  id="contact" class="grad-bg no-pd">
@@ -330,6 +342,7 @@
     </footer>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/tilt.js"></script>
+<script src="../js/slick.min.js"></script>
 <script src="../js/script.js"></script>
 </body>
 </html>
