Add desctop, realisation and result section

--- a/forum/index.html
+++ b/forum/index.html
@@ -62,7 +62,7 @@
         <div class="slide grad-bg">
             <div class="small-12 row block relative">
                 <svg class="hero-logo" viewBox="0 0 251 243" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M102.364 28.55V0H142v243h-39.636v-27.09a48.091 48.091 0 0 1-2.486-.096C14.63 210.372 0 174.968 0 117.783 0 60.766 24.905 32.697 102.364 28.55zm0 150.253c-47.053-6.24-52.265-27.799-52.265-58.572 0-30.287 7.957-49.517 52.265-54.718v113.29zm97.278-76.89C196.18 81.928 184.745 70.549 153 66.247V29.065c74.037 4.945 98 33.017 98 88.965 0 56.778-14.413 92.08-98 97.902v-37.457c32.66-4.99 43.36-17.196 46.623-36.893H165.9v-39.67h33.742z" fill="#000" fill-rule="evenodd" fill-opacity=".1"/>
+                    <path d="M102.364 28.55V0H142v243h-39.636v-27.09a48.091 48.091 0 0 1-2.486-.096C14.63 210.372 0 174.968 0 117.783 0 60.766 24.905 32.697 102.364 28.55zm0 150.253c-47.053-6.24-52.265-27.799-52.265-58.572 0-30.287 7.957-49.517 52.265-54.718v113.29zm97.278-76.89C196.18 81.928 184.745 70.549 153 66.247V29.065c74.037 4.945 98 33.017 98 88.965 0 56.778-14.413 92.08-98 97.902v-37.457c32.66-4.99 43.36-17.196 46.623-36.893H165.9v-39.67h33.742z" fill="#000" fill-rule="evenodd" fill-opacity=".1" id="bg-logo"/>
                 </svg>
                 <img class="hero-mock medium-rm small-rm" src="../media/Mockup/Forum.png" alt="Forum">
                 <div class="relative">
@@ -168,9 +168,12 @@
                         Сделали удобную адаптивнцю версию сайта чтобы на ней хорошо отображалось расписание, так как это одна из главных частей сайта. При этом не забыли и про другие разделы 
                 </h4>
             </div>
+            <svg class="mobile-logo small-rm medium-rm" width="300" height="300" viewbox="0 0 251 243" xmlns="http://www.w3.org/2000/svg">
+                <path d="M102.364 28.55V0H142v243h-39.636v-27.09a48.09 48.09 0 0 1-2.486-.096C14.63 210.372 0 174.968 0 117.783 0 60.766 24.905 32.697 102.364 28.55zm0 150.253c-47.053-6.24-52.265-27.799-52.265-58.572 0-30.287 7.957-49.517 52.265-54.718v113.29zm97.278-76.89C196.18 81.928 184.745 70.549 153 66.247V29.065c74.037 4.945 98 33.017 98 88.965 0 56.778-14.413 92.08-98 97.902v-37.457c32.66-4.99 43.36-17.196 46.623-36.893H165.9v-39.67h33.742z" fill="#000" fill-rule="evenodd" fill-opacity=".1"/>
+            </svg>
             <div class="small-12 medium-6 columns no-pd">
-            <div class="phone-wrapper">
-                <div class="phone">
+            <div class="iphone-wrapper">
+                <div class="iphone">
                     <div class="screen">
                         <iframe src="./index.html" frameborder="0"></iframe>
                     </div>
@@ -191,7 +194,7 @@
             </h4>
         </div>
     </section>
-    <section id="portfolio">
+    <section id="desktop" class="small-rm no-pd">
         <svg class="bg-decor" height="auto" viewBox="0 0 3240 466" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <defs>
               <linearGradient x1="20.546%" y1="100%" x2="74.785%" y2="5.732%" id="b1">
@@ -203,18 +206,15 @@
             <use fill="url(#b1)" xlink:href="#a1" transform="translate(0 -112)" fill-rule="evenodd"/>
         </svg>
         <div class="small-12 row block">
-                <h1>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                </h1>
+            <div class="space-3"></div>
+            <div class="imac-wrapper">
+                    <div class="imac">
+                        <div class="screen">
+                            <iframe src="./index.html" frameborder="0"></iframe>
+                        </div>
+                        <img src="../media/iMac-frame.png" alt="iMac">
+                    </div>
+                </div>
             </div>
     </section>
     <section id="conclusion" class="">
@@ -222,6 +222,13 @@
             <h4>
                 Форум не был проведён из-за организационных проблем, однако сайт был разработан и введён в эксплуатацию за один месяц, полностью удовлетворив исходные требования. 
             </h4>
+        </div>
+    </section>
+    <section id="result" class="secondary">
+        <div class="small-12 row block">
+            <h2 class="text-center">
+                Готовый сайт: <a href="http://forum.devandprod.ru">forum.devandprod.ru</a>
+            </h2>
         </div>
     </section>
 
